syntax = "proto3";

package api.v1;

message Category {
  int32 id = 1;
  string name = 2;
  string color = 3;
  string created_at = 4;
  int32 parent_id = 5;
  bool is_group = 6;
}

message CategoryRule {
  int32 id = 1;
  int32 category_id = 2;
  string description_contains = 3;
  int32 position = 4;
  string created_at = 5;
}

message ListCategoriesRequest {}

message ListCategoriesResponse {
  repeated Category categories = 1;
}

message CreateCategoryRequest {
  string name = 1;
  string color = 2;
  int32 parent_id = 3;
  bool is_group = 4;
}

message CreateCategoryResponse {
  Category category = 1;
}

message UpdateCategoryRequest {
  int32 id = 1;
  string name = 2;
  string color = 3;
  int32 parent_id = 4;
  bool is_group = 5;
}

message UpdateCategoryResponse {}

message DeleteCategoryRequest {
  int32 id = 1;
}

message DeleteCategoryResponse {}

message ListCategoryRulesRequest {}

message ListCategoryRulesResponse {
  repeated CategoryRule rules = 1;
}

message CreateCategoryRuleRequest {
  int32 category_id = 1;
  string description_contains = 2;
}

message CreateCategoryRuleResponse {
  CategoryRule rule = 1;
}

message UpdateCategoryRuleRequest {
  int32 id = 1;
  int32 category_id = 2;
  string description_contains = 3;
}

message UpdateCategoryRuleResponse {}

message DeleteCategoryRuleRequest {
  int32 id = 1;
}

message DeleteCategoryRuleResponse {}

message ApplyCategoryRulesRequest {
  bool apply_to_all = 1;
}

message ApplyCategoryRulesResponse {
  int32 updated_count = 1;
}

message ReorderCategoryRulesRequest {
  repeated int32 rule_ids = 1;
}

message ReorderCategoryRulesResponse {}

service CategoryService {
  rpc ListCategories(ListCategoriesRequest) returns (ListCategoriesResponse) {}
  rpc CreateCategory(CreateCategoryRequest) returns (CreateCategoryResponse) {}
  rpc UpdateCategory(UpdateCategoryRequest) returns (UpdateCategoryResponse) {}
  rpc DeleteCategory(DeleteCategoryRequest) returns (DeleteCategoryResponse) {}
  rpc ListCategoryRules(ListCategoryRulesRequest) returns (ListCategoryRulesResponse) {}
  rpc CreateCategoryRule(CreateCategoryRuleRequest) returns (CreateCategoryRuleResponse) {}
  rpc UpdateCategoryRule(UpdateCategoryRuleRequest) returns (UpdateCategoryRuleResponse) {}
  rpc DeleteCategoryRule(DeleteCategoryRuleRequest) returns (DeleteCategoryRuleResponse) {}
  rpc ApplyCategoryRules(ApplyCategoryRulesRequest) returns (ApplyCategoryRulesResponse) {}
  rpc ReorderCategoryRules(ReorderCategoryRulesRequest) returns (ReorderCategoryRulesResponse) {}
}
