syntax = "proto3";

package api.v1;

import "buf/validate/validate.proto";

message GreetRequest {
  string name = 1 [(buf.validate.field).string = {
    min_len: 1,
    max_len: 50,
  }];
}

message GreetResponse {
  string greeting = 1;
  string language = 2;
}

service GreetService {
  rpc Greet(GreetRequest) returns (GreetResponse) {}
}