syntax = "proto3";

package api.v1;

import "buf/validate/validate.proto";

message ListRequest {
}

message ListResponse {
  repeated string item = 1;
}

message RemoveRequest {
  string item = 1;
}

message RemoveResponse {
  repeated string item = 1;
}

service TodoService {
  rpc List(ListRequest) returns (ListResponse) {}
  rpc Remove(RemoveRequest) returns (RemoveResponse) {}
}